frontend/src/app/main/ui/workspace/sidebar/assets/groups.scss
// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at http://mozilla.org/MPL/2.0/.
//
// Copyright (c) KALEIDOS INC

@import "refactor/common-refactor.scss";

.group-title {
  padding-left: $s-4;
}

.pre-path {
  margin-left: $s-2;
  text-transform: initial;
  color: var(--title-foreground-color);
}

.path {
  margin-left: $s-2;
  text-transform: initial;
  color: var(--title-foreground-color-hover);
}

.modal-overlay {
  @extend .modal-overlay-base;
}

.modal-container {
  @extend .modal-container-base;
}

.modal-header {
  margin-bottom: $s-24;
}

.modal-title {
  @include tabTitleTipography;
  color: var(--modal-title-foreground-color);
}
.modal-close-btn {
  @extend .modal-close-btn-base;
}

.modal-content {
  @include titleTipography;
  margin-bottom: $s-24;
}
.input-wrapper {
  @extend .input-with-label;
}
.action-buttons {
  @extend .modal-action-btns;
}
.cancel-button {
  @extend .modal-cancel-btn;
}

.accept-btn {
  @extend .modal-accept-btn;
  &.danger {
    @extend .modal-danger-btn;
  }
}

